--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -563,6 +563,8 @@
                                       <ul class="collapse list-unstyled collapse-1">
                                           <li><a class="child 1" href="#Patches"> Patches & Updates</a></li>
                                           <li><a class="child 1" href="#What"> What's New</a></li>
+                                          <li><a class="child 1" href="#Functionalities"> Functionalities Modified</a></li>
+                                          <li><a class="child 1" href="#Issues"> Issues Resolved</a></li>
                                       </ul>
                                       <li class="subMenu">
                                           <a href="#TechforceRPA" class="heading"><span class="numbers"></span>Techforce.ai RPA</a>
@@ -891,15 +893,34 @@
                             </div>
                             <div id="What"  class="page-section">
                                   <h4 class="purple"><span class="numbers"></span> What’s New</h4>
-                                  <p><span class="numbers">1.</span> Firefox and Microsoft Edge support Web Automation.</p>
-                                  <p><span class="numbers">2.</span> Lightweight installation distribution</p>
-                                  <p><span class="numbers">3.</span> Debug mode</p>
-                                  <p><span class="numbers">4.</span> Pluggable architecture</p>
-                                  <p><span class="numbers">5.</span> Improved performance</p>
-                                  <p><span class="numbers">6.</span> Registration option from e-worker to e-manager console (Reverse registration feature)</p>
-                                  <p><span class="numbers">7.</span> Live log feature in e-manager console to monitor Action Flows</p>
-                                  <p><span class="numbers">8.</span> Database actions in Studio to support MySQL and PostgreSQL databases</p>
-                                  <p><span class="numbers">9.</span> Publish option in Studio to publish Action Flows to e-manager console</p>
+                                  <p><span class="numbers">1.</span> Data Scrapping</p>
+                                  <p><span class="numbers">2.</span> Custom Condition in IF/Else</p>
+                                  <p><span class="numbers">3.</span> Pivot Table, Refresh Excel, Create Excel</p>
+                                  <p><span class="numbers">4.</span> Export to PDF</p>
+                                  <p><span class="numbers">5.</span> Unzip Files</p>
+                                  <p><span class="numbers">6.</span> Create/Delete Folder/Files (SFTP)</p>
+                                  <p><span class="numbers">7.</span> MS SQL option in Database connection</p>
+                                  <p><span class="numbers">8.</span> Get Parameters</p>
+                            </div>
+
+                            <div id="Functionalities"  class="page-section">
+                                  <h4 class="purple"><span class="numbers"></span> Functionalities Modified</h4>
+                                  <p><span class="numbers">1.</span>	Keyboard Shortcuts </p>
+                                  <p><span class="numbers">2.</span>	Assign (Desired variable name and Date format specification)</p>
+                                  <p><span class="numbers">3.</span>	Convert to xlsx (To accept different types in the destination paths)</p>
+                                  <p><span class="numbers">4.</span>  HTTP API (Accepts attachment)</p>
+                                  <p><span class="numbers">5.</span>  Read Table (Entire table will be read)</p>
+                                  <p><span class="numbers">6.</span>  Get Range (Specify what to get from Excel)</p>
+                                  <p><span class="numbers">7.</span>  Delete Range (Deletes entire range when nothing specified)</p>
+                                  <p><span class="numbers">8.</span>  Get Outlook mail</p>
+                            </div>
+
+                            <div id="Issues"  class="page-section">
+                                  <h4 class="purple"><span class="numbers"></span>  Issues Resolved</h4>
+                                  <p><span class="numbers">1.</span>	Fixed issues that prevents-studio installation when the install path has spaces</p>
+                                  <p><span class="numbers">2.</span>	Resolved issues with desktop automation (dll file missing issues)</p>
+                                  <p><span class="numbers">3.</span>	Enhanced support to handle Popups and Frames</p>
+                                  <p><span class="numbers">4.</span>	Implicit wait feature that waits for webpage elements to load before act on</p>
                             </div>
 
                             <div id="TechforceRPA"  class="page-section">
